--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Mannequin
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -701,8 +701,8 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=220.000
-WindowSize=X=1300.000 Y=740.000
+ScreenPosition=X=2240.000 Y=220.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1286,5 +1286,7 @@ ClothingSystemEditorInterface.TimeStamp=2017.10.05-19.06.11
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.10.05-19.06.21
 ExternalImagePicker.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2017.08.10-10.01.18
+SynthBenchmark.LastCompileMethod=Unknown
 
 
