--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ bUseUnsortedMenus=False
 bShowMobileStats=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
+PostProcessVolume=PostProcessVolume.Color Grading.Color Grading,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.AxisMappings.Aim,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.AxisMappings.Aim,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.AxisMappings.Aim,
@@ -151,7 +151,6 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Mannequin
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -178,6 +177,8 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/M_PostProcess2_base.M_PostProcess2_base
+OpenAssetsAtExit=/Game/ThirdPersonBP/M_PostProcess_Base.M_PostProcess_Base
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -664,6 +665,29 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+SceneComponent.TransformCommon=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -701,8 +725,8 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=2240.000 Y=220.000
-WindowSize=X=1310.000 Y=750.000
+ScreenPosition=X=320.000 Y=220.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -734,7 +758,7 @@ bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=False
 bAllowMeshSectionSelection=False
 
 [Directories2]
-UNR=H:/Uni Work/Year Two/Journeyman/Team5/Content/
+UNR=U:/New folder/JMan_Team5/Team5/Content/ThirdPersonBP/Maps
 BRUSH=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBX=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBXAnim=H:/Uni Work/Year Two/Journeyman/Team5/Content/
@@ -1288,5 +1312,7 @@ ExternalImagePicker.TimeStamp=2017.10.05-19.06.21
 ExternalImagePicker.LastCompileMethod=Unknown
 SynthBenchmark.TimeStamp=2017.08.10-10.01.18
 SynthBenchmark.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.08.10-10.01.11
+MaterialEditor.LastCompileMethod=Unknown
 
 
