--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,8 +177,6 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/M_PostProcess2_base.M_PostProcess2_base
-OpenAssetsAtExit=/Game/ThirdPersonBP/M_PostProcess_Base.M_PostProcess_Base
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -688,6 +686,54 @@ SceneComponent.Rendering=True
 SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
+REINST_ThirdPersonCharacter_C_35.Variable=True
+REINST_ThirdPersonCharacter_C_35.Sockets=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_35.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_35.Character Movement=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_35.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_35.RootMotion=True
+REINST_ThirdPersonCharacter_C_35.NavMovement=True
+REINST_ThirdPersonCharacter_C_35.Velocity=True
+REINST_ThirdPersonCharacter_C_35.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_35.MovementComponent=True
+REINST_ThirdPersonCharacter_C_35.Tags=True
+REINST_ThirdPersonCharacter_C_35.ComponentReplication=True
+REINST_ThirdPersonCharacter_C_35.Activation=True
+REINST_ThirdPersonCharacter_C_35.Cooking=True
+REINST_ThirdPersonCharacter_C_35.Events=True
+REINST_ThirdPersonCharacter_C_39.Variable=True
+REINST_ThirdPersonCharacter_C_39.Sockets=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Jumping / Falling=True
+REINST_ThirdPersonCharacter_C_39.Character Movement (General Settings)=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Walking=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Swimming=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Flying=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Custom Movement=True
+REINST_ThirdPersonCharacter_C_39.Character Movement (Rotation Settings)=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Physics Interaction=True
+REINST_ThirdPersonCharacter_C_39.Character Movement (Networking)=True
+REINST_ThirdPersonCharacter_C_39.Character Movement=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: Avoidance=True
+REINST_ThirdPersonCharacter_C_39.Character Movement: NavMesh Movement=True
+REINST_ThirdPersonCharacter_C_39.RootMotion=True
+REINST_ThirdPersonCharacter_C_39.NavMovement=True
+REINST_ThirdPersonCharacter_C_39.Velocity=True
+REINST_ThirdPersonCharacter_C_39.PlanarMovement=True
+REINST_ThirdPersonCharacter_C_39.MovementComponent=True
+REINST_ThirdPersonCharacter_C_39.Tags=True
+REINST_ThirdPersonCharacter_C_39.ComponentReplication=True
+REINST_ThirdPersonCharacter_C_39.Activation=True
+REINST_ThirdPersonCharacter_C_39.Cooking=True
+REINST_ThirdPersonCharacter_C_39.Events=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -726,7 +772,7 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
-WindowSize=X=1320.000 Y=760.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -758,7 +804,7 @@ bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=False
 bAllowMeshSectionSelection=False
 
 [Directories2]
-UNR=U:/New folder/JMan_Team5/Team5/Content/ThirdPersonBP/Maps
+UNR=F:/Uni Work/Journeyman/JMan_Team5/Team5/Content/ThirdPersonBP/Maps
 BRUSH=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBX=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBXAnim=H:/Uni Work/Year Two/Journeyman/Team5/Content/
@@ -1314,5 +1360,7 @@ SynthBenchmark.TimeStamp=2017.08.10-10.01.18
 SynthBenchmark.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.08.10-10.01.11
 MaterialEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2017.08.10-10.01.09
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 
