Character Movement Adjustments & Aiming Fix
Movement speed has been reduced for all movement modes. Aiming has been
fixed so the line trace is drawn from the character to where the centre
of the camera is pointing. Attacking has been implemented, both while
aiming as well as a temporary melee hitbox that appears whilst not
aiming.

--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -802,6 +802,56 @@ REINST_ThirdPersonCharacter_C_39.ComponentReplication=True
 REINST_ThirdPersonCharacter_C_39.Activation=True
 REINST_ThirdPersonCharacter_C_39.Cooking=True
 REINST_ThirdPersonCharacter_C_39.Events=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleLocationPrimitiveSphere.Location=True
+ParticleModuleLocationPrimitiveSphere.Cascade=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleAccelerationConstant.ParticleModuleAccelerationConstant=True
+ParticleModuleAccelerationConstant.Cascade=False
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -817,11 +867,27 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.Po
 Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
-InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 ThirdPersonOverview_C="\"Object.Stages.Stages\" "
 EditorTutorial="\"Object.Stages.Stages\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.ParticleModuleAccelerationConstant.Acceleration\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" \"Object.Location.StartLocation.Distribution.Object.Constant\" "
+ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" \"Object.Location.StartLocation.Distribution.Object.Constant\" "
+ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" \"Object.Location.StartLocation.Distribution.Object.Constant\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleAccelerationConstant="\"Object.ParticleModuleAccelerationConstant.Acceleration\" "
+ParticleModuleAccelerationBase="\"Object.ParticleModuleAccelerationConstant.Acceleration\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.PostProcessVolume_0.LightPropagationVolumeBlendable_0=0
@@ -830,7 +896,8 @@ EditorTutorial="\"Object.Stages.Stages\" "
 /Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
 /Game/CORE_ASSETS/ThirdPersonBP/M_PostProcess_Base.M_PostProcess_Base=0
 /Game/CORE_ASSETS/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
-/Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
+/Game/HARRY_GIBSON/P_Sparks.P_Sparks=0
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Usage=False
@@ -845,9 +912,9 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=-15.000
-ScreenPosition=X=320.000 Y=220.000
+ScreenPosition=X=2240.000 Y=220.000
 WindowSize=X=1320.000 Y=760.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1360.000 Y=800.000
 None=======
 InitiallyMaximized=True
 
@@ -1440,6 +1507,10 @@ MaterialEditor.TimeStamp=2017.08.10-10.01.11
 MaterialEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2017.08.10-10.01.09
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+Cascade.TimeStamp=2017.08.10-10.01.03
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2017.08.10-10.01.06
+DistCurveEditor.LastCompileMethod=Unknown
 
 [PathColor]
 /Game/CORE_ASSETS=(R=0.048353,G=0.775000,B=0.000000,A=1.000000)
@@ -1447,5 +1518,38 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
