--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -208,7 +208,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/RICHARD_LANE
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -852,6 +852,26 @@ ParticleModuleColorOverLife.Color=True
 ParticleModuleColorOverLife.Cascade=True
 ParticleModuleAccelerationConstant.ParticleModuleAccelerationConstant=True
 ParticleModuleAccelerationConstant.Cascade=False
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Actor=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -898,6 +918,7 @@ ParticleModuleAccelerationBase="\"Object.ParticleModuleAccelerationConstant.Acce
 /Game/CORE_ASSETS/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/HARRY_GIBSON/P_Sparks.P_Sparks=0
+/Game/RICHARD_LANE/M_PostProcess2_base.M_PostProcess2_base=1
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Usage=False
@@ -914,7 +935,7 @@ PrimType=1
 ScreenPosition=X=470.000 Y=-15.000
 ScreenPosition=X=2240.000 Y=220.000
 WindowSize=X=1320.000 Y=760.000
-WindowSize=X=1360.000 Y=800.000
+WindowSize=X=1380.000 Y=820.000
 None=======
 InitiallyMaximized=True
 
@@ -948,7 +969,7 @@ bAllowMeshSectionSelection=False
 
 [Directories2]
 UNR=F:/Uni Work/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
-UNR=F:/Uni Work/Journeyman/JMan_Team5/Team5/Content/ThirdPersonBP/Maps
+UNR=U:/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
 None=======
 BRUSH=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBX=H:/Uni Work/Year Two/Journeyman/Team5/Content/
@@ -1551,5 +1572,8 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 
 
