Sphere Trace for Objects Added
A simple sphere trace for item and object interaction has been
implemented.

--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,6 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TU45334
 LastExecutedLaunchName=TU45334
+NewWindowPosition=(X=315,Y=203)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -209,7 +210,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/RICHARD_LANE
+ContentBrowserTab1.SelectedPaths=/Game/CORE_ASSETS/ThirdPersonBP/Blueprints
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -732,6 +733,7 @@ ThirdPersonOverview_C.Testing=True
 ThirdPersonOverview_C.Tutorial=True
 ThirdPersonOverview_C.Stages=True
 None=======
+None=======
 BP_Sky_Sphere_C.TransformCommon=True
 BP_Sky_Sphere_C.Default=True
 BP_Sky_Sphere_C.Override settings=True
@@ -853,7 +855,6 @@ ParticleModuleColorOverLife.Color=True
 ParticleModuleColorOverLife.Cascade=True
 ParticleModuleAccelerationConstant.ParticleModuleAccelerationConstant=True
 ParticleModuleAccelerationConstant.Cascade=False
-<<<<<<< HEAD
 ExponentialHeightFog.TransformCommon=True
 ExponentialHeightFog.ExponentialHeightFogComponent=True
 ExponentialHeightFog.InscatteringTexture=True
@@ -881,11 +882,23 @@ LandscapeEditorObject.Target Layers=True
 PaintBrushSettings.Brush=True
 PaintBrushSettings.View=True
 PaintModeSettings.VertexPainting=True
-=======
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
->>>>>>> refs/remotes/origin/master
+TestMap_C.Tick=True
+TestMap_C.Replication=True
+TestMap_C.Input=True
+TestMap_C.Actor=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+DocumentationActor.Help Data=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -932,13 +945,12 @@ ParticleModuleAccelerationBase="\"Object.ParticleModuleAccelerationConstant.Acce
 /Game/CORE_ASSETS/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/HARRY_GIBSON/P_Sparks.P_Sparks=0
-<<<<<<< HEAD
+/Game/RICHARD_LANE/M_PostProcess2_base.M_PostProcess2_base=1
 /Game/RICHARD_LANE/M_PostProcess2_base.M_PostProcess2_base=1
 /Game/RICHARD_LANE/M_PostProcess_Crosshatch.M_PostProcess_Crosshatch=1
-=======
 /Game/RICHARD_LANE/M_PostProcess_Crosshatch.M_PostProcess_Crosshatch=1
-/Game/RICHARD_LANE/M_PostProcess2_base.M_PostProcess2_base=1
->>>>>>> refs/remotes/origin/master
+None=======
+/Game/CORE_ASSETS/ThirdPersonBP/Maps/TestMap.TestMap:PersistentLevel.TestMap=0
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Usage=False
@@ -949,17 +961,15 @@ ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=1
+PrimType=3
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=-15.000
 ScreenPosition=X=320.000 Y=220.000
 WindowSize=X=1320.000 Y=760.000
-<<<<<<< HEAD
 WindowSize=X=1390.000 Y=830.000
-=======
-WindowSize=X=1380.000 Y=820.000
->>>>>>> refs/remotes/origin/master
+WindowSize=X=1390.000 Y=830.000
+None=======
 None=======
 InitiallyMaximized=True
 
@@ -993,11 +1003,9 @@ bAllowMeshSectionSelection=False
 
 [Directories2]
 UNR=F:/Uni Work/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
-<<<<<<< HEAD
 UNR=U:/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
-=======
-UNR=U:/New folder/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
->>>>>>> refs/remotes/origin/master
+UNR=U:/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
+None=======
 None=======
 BRUSH=H:/Uni Work/Year Two/Journeyman/Team5/Content/
 FBX=H:/Uni Work/Year Two/Journeyman/Team5/Content/
