--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,7 +210,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/CORE_ASSETS/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/HARRY_GIBSON
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -899,6 +899,27 @@ K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 DocumentationActor.Help Data=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Events=True
+REINST_ThirdPersonCharacter_C_119.Variable=True
+REINST_ThirdPersonCharacter_C_119.TransformCommon=True
+REINST_ThirdPersonCharacter_C_119.Sockets=True
+REINST_ThirdPersonCharacter_C_119.Animation=True
+REINST_ThirdPersonCharacter_C_119.Mesh=True
+REINST_ThirdPersonCharacter_C_119.Materials=True
+REINST_ThirdPersonCharacter_C_119.Clothing=True
+REINST_ThirdPersonCharacter_C_119.ClothingSimulation=True
+REINST_ThirdPersonCharacter_C_119.Physics=True
+REINST_ThirdPersonCharacter_C_119.Collision=True
+REINST_ThirdPersonCharacter_C_119.Lighting=True
+REINST_ThirdPersonCharacter_C_119.Rendering=True
+REINST_ThirdPersonCharacter_C_119.Tags=True
+REINST_ThirdPersonCharacter_C_119.ComponentReplication=True
+REINST_ThirdPersonCharacter_C_119.Activation=True
+REINST_ThirdPersonCharacter_C_119.Cooking=True
+REINST_ThirdPersonCharacter_C_119.Events=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -968,7 +989,7 @@ ScreenPosition=X=470.000 Y=-15.000
 ScreenPosition=X=320.000 Y=220.000
 WindowSize=X=1320.000 Y=760.000
 WindowSize=X=1390.000 Y=830.000
-WindowSize=X=1390.000 Y=830.000
+WindowSize=X=1400.000 Y=840.000
 None=======
 None=======
 InitiallyMaximized=True
