Updated richy test
Ajusted shader

--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -241,8 +241,6 @@ LastLevel=/Game/CORE_ASSETS/ThirdPersonBP/Maps/TestMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/RICHARD_LANE/M_PostProcess_Crosshatch.M_PostProcess_Crosshatch
-OpenAssetsAtExit=/Game/RICHARD_LANE/Triplanarmaterial.Triplanarmaterial
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1009,6 +1007,8 @@ MaterialExpressionSaturate.MaterialExpression=True
 MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
 MaterialExpressionReflectionVectorWS.MaterialExpression=True
 MaterialExpressionObjectPositionWS.MaterialExpression=True
+MaterialExpressionTextureBase.MaterialExpressionTextureBase=True
+MaterialExpressionTextureBase.MaterialExpression=True
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -1023,7 +1023,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" 
 Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[1]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[1]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Lightmass.LightmassSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
@@ -1080,6 +1080,7 @@ MaterialFunction="\"Object.MaterialFunction.LibraryCategoriesText\" "
 /Game/RICHARD_LANE/Surface_m.Surface_m=1
 /Game/RICHARD_LANE/BlendCoords.BlendCoords=1
 /Game/RICHARD_LANE/Triplanarmaterial.Triplanarmaterial=1
+/Game/RICHARD_LANE/DO_NOT_USE.DO_NOT_USE=1
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Usage=False
@@ -1096,7 +1097,7 @@ PrimType=1
 ScreenPosition=X=470.000 Y=-15.000
 ScreenPosition=X=320.000 Y=220.000
 WindowSize=X=1320.000 Y=760.000
-WindowSize=X=1430.000 Y=870.000
+WindowSize=X=1440.000 Y=880.000
 None=======
 InitiallyMaximized=True
 
