--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,13 @@ DerivedDataCache/*
 *.swp
 *.swo
 .ctrlp_cache/
+
+Team5/Intermediate/AssetRegistryCache/c90e3f55\.bin
+
+Team5/Intermediate/CachedAssetRegistry\.bin
+
+Team5/Saved/AutoScreenshot\.png
+
+Team5/Saved/Config/Windows/EditorPerProjectUserSettings\.ini
+
+Team5/Saved/Logs/Team5\.log
