--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/CORE_ASSETS
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -115,10 +115,12 @@ LastLevel=/Game/CORE_ASSETS/ThirdPersonBP/Maps/TestMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/CORE_ASSETS/Ue4ASP_Character.Ue4ASP_Character
+OpenAssetsAtExit=/Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=220.000
-WindowSize=X=1310.000 Y=750.000
+ScreenPosition=X=342.000 Y=58.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -687,6 +689,8 @@ SkeletonEditor.TimeStamp=2017.08.10-10.01.17
 SkeletonEditor.LastCompileMethod=Unknown
 ClothingSystemEditorInterface.TimeStamp=2017.08.10-10.01.03
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2017.08.10-10.01.18
+SynthBenchmark.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1153,12 +1157,137 @@ K2Node_InputAction.Input=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+REINST_Ue4ASP_Character_C_40.Variable=True
+REINST_Ue4ASP_Character_C_40.TransformCommon=True
+REINST_Ue4ASP_Character_C_40.Sockets=True
+REINST_Ue4ASP_Character_C_40.Animation=True
+REINST_Ue4ASP_Character_C_40.Mesh=True
+REINST_Ue4ASP_Character_C_40.Materials=True
+REINST_Ue4ASP_Character_C_40.Clothing=True
+REINST_Ue4ASP_Character_C_40.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_40.Physics=True
+REINST_Ue4ASP_Character_C_40.Collision=True
+REINST_Ue4ASP_Character_C_40.Lighting=True
+REINST_Ue4ASP_Character_C_40.Rendering=True
+REINST_Ue4ASP_Character_C_40.Tags=True
+REINST_Ue4ASP_Character_C_40.ComponentReplication=True
+REINST_Ue4ASP_Character_C_40.Activation=True
+REINST_Ue4ASP_Character_C_40.Cooking=True
+REINST_Ue4ASP_Character_C_40.Events=True
+REINST_Ue4ASP_Character_C_45.Variable=True
+REINST_Ue4ASP_Character_C_45.TransformCommon=True
+REINST_Ue4ASP_Character_C_45.Sockets=True
+REINST_Ue4ASP_Character_C_45.Animation=True
+REINST_Ue4ASP_Character_C_45.Mesh=True
+REINST_Ue4ASP_Character_C_45.Materials=True
+REINST_Ue4ASP_Character_C_45.Clothing=True
+REINST_Ue4ASP_Character_C_45.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_45.Physics=True
+REINST_Ue4ASP_Character_C_45.Collision=True
+REINST_Ue4ASP_Character_C_45.Lighting=True
+REINST_Ue4ASP_Character_C_45.Rendering=True
+REINST_Ue4ASP_Character_C_45.Tags=True
+REINST_Ue4ASP_Character_C_45.ComponentReplication=True
+REINST_Ue4ASP_Character_C_45.Activation=True
+REINST_Ue4ASP_Character_C_45.Cooking=True
+REINST_Ue4ASP_Character_C_45.Events=True
+REINST_Ue4ASP_Character_C_50.Variable=True
+REINST_Ue4ASP_Character_C_50.TransformCommon=True
+REINST_Ue4ASP_Character_C_50.Sockets=True
+REINST_Ue4ASP_Character_C_50.Animation=True
+REINST_Ue4ASP_Character_C_50.Mesh=True
+REINST_Ue4ASP_Character_C_50.Materials=True
+REINST_Ue4ASP_Character_C_50.Clothing=True
+REINST_Ue4ASP_Character_C_50.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_50.Physics=True
+REINST_Ue4ASP_Character_C_50.Collision=True
+REINST_Ue4ASP_Character_C_50.Lighting=True
+REINST_Ue4ASP_Character_C_50.Rendering=True
+REINST_Ue4ASP_Character_C_50.Tags=True
+REINST_Ue4ASP_Character_C_50.ComponentReplication=True
+REINST_Ue4ASP_Character_C_50.Activation=True
+REINST_Ue4ASP_Character_C_50.Cooking=True
+REINST_Ue4ASP_Character_C_50.Events=True
+REINST_Ue4ASP_Character_C_63.Variable=True
+REINST_Ue4ASP_Character_C_63.TransformCommon=True
+REINST_Ue4ASP_Character_C_63.Sockets=True
+REINST_Ue4ASP_Character_C_63.Animation=True
+REINST_Ue4ASP_Character_C_63.Mesh=True
+REINST_Ue4ASP_Character_C_63.Materials=True
+REINST_Ue4ASP_Character_C_63.Clothing=True
+REINST_Ue4ASP_Character_C_63.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_63.Physics=True
+REINST_Ue4ASP_Character_C_63.Collision=True
+REINST_Ue4ASP_Character_C_63.Lighting=True
+REINST_Ue4ASP_Character_C_63.Rendering=True
+REINST_Ue4ASP_Character_C_63.Tags=True
+REINST_Ue4ASP_Character_C_63.ComponentReplication=True
+REINST_Ue4ASP_Character_C_63.Activation=True
+REINST_Ue4ASP_Character_C_63.Cooking=True
+REINST_Ue4ASP_Character_C_63.Events=True
+REINST_Ue4ASP_Character_C_73.Variable=True
+REINST_Ue4ASP_Character_C_73.TransformCommon=True
+REINST_Ue4ASP_Character_C_73.Sockets=True
+REINST_Ue4ASP_Character_C_73.Animation=True
+REINST_Ue4ASP_Character_C_73.Mesh=True
+REINST_Ue4ASP_Character_C_73.Materials=True
+REINST_Ue4ASP_Character_C_73.Clothing=True
+REINST_Ue4ASP_Character_C_73.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_73.Physics=True
+REINST_Ue4ASP_Character_C_73.Collision=True
+REINST_Ue4ASP_Character_C_73.Lighting=True
+REINST_Ue4ASP_Character_C_73.Rendering=True
+REINST_Ue4ASP_Character_C_73.Tags=True
+REINST_Ue4ASP_Character_C_73.ComponentReplication=True
+REINST_Ue4ASP_Character_C_73.Activation=True
+REINST_Ue4ASP_Character_C_73.Cooking=True
+REINST_Ue4ASP_Character_C_73.Events=True
+REINST_Ue4ASP_Character_C_82.Variable=True
+REINST_Ue4ASP_Character_C_82.TransformCommon=True
+REINST_Ue4ASP_Character_C_82.Sockets=True
+REINST_Ue4ASP_Character_C_82.Animation=True
+REINST_Ue4ASP_Character_C_82.Mesh=True
+REINST_Ue4ASP_Character_C_82.Materials=True
+REINST_Ue4ASP_Character_C_82.Clothing=True
+REINST_Ue4ASP_Character_C_82.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_82.Physics=True
+REINST_Ue4ASP_Character_C_82.Collision=True
+REINST_Ue4ASP_Character_C_82.Lighting=True
+REINST_Ue4ASP_Character_C_82.Rendering=True
+REINST_Ue4ASP_Character_C_82.Tags=True
+REINST_Ue4ASP_Character_C_82.ComponentReplication=True
+REINST_Ue4ASP_Character_C_82.Activation=True
+REINST_Ue4ASP_Character_C_82.Cooking=True
+REINST_Ue4ASP_Character_C_82.Events=True
+REINST_Ue4ASP_Character_C_91.Variable=True
+REINST_Ue4ASP_Character_C_91.TransformCommon=True
+REINST_Ue4ASP_Character_C_91.Sockets=True
+REINST_Ue4ASP_Character_C_91.Animation=True
+REINST_Ue4ASP_Character_C_91.Mesh=True
+REINST_Ue4ASP_Character_C_91.Materials=True
+REINST_Ue4ASP_Character_C_91.Clothing=True
+REINST_Ue4ASP_Character_C_91.ClothingSimulation=True
+REINST_Ue4ASP_Character_C_91.Physics=True
+REINST_Ue4ASP_Character_C_91.Collision=True
+REINST_Ue4ASP_Character_C_91.Lighting=True
+REINST_Ue4ASP_Character_C_91.Rendering=True
+REINST_Ue4ASP_Character_C_91.Tags=True
+REINST_Ue4ASP_Character_C_91.ComponentReplication=True
+REINST_Ue4ASP_Character_C_91.Activation=True
+REINST_Ue4ASP_Character_C_91.Cooking=True
+REINST_Ue4ASP_Character_C_91.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/CORE_ASSETS/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Character=1
 /Game/CORE_ASSETS/Ue4ASP_Character.Ue4ASP_Character=0
 /Game/CORE_ASSETS/Mannequin/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=0
+/Game/CORE_ASSETS/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/CORE_ASSETS/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Character;
@@ -1168,5 +1297,9 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
+
+[PathColor]
+/Game/CORE_ASSETS=(R=0.074200,G=0.500000,B=0.000000,A=1.000000)
+/Game/HARRY_GIBSON=(R=0.000000,G=0.045700,B=0.500000,A=1.000000)
 
 
